@@ -23,6 +23,9 @@
 #include "mysql_common.h"
 #endif
 
+#ifdef LIBSQLITE
+#include "sqlite_common.h"
+#endif
 
 void dbt2_escape_str(char *orig_str, char *esc_str);
 int dbt2_init_values(char ** values, int max_values);
@@ -81,12 +84,20 @@ int dbt2_free_values(char ** values, int max_values);
 	"FROM warehouse\n" \
 	"WHERE w_id = %d"
 
+#ifndef LIBSQLITE
 #define NEW_ORDER_2 \
 	"SELECT d_tax, d_next_o_id\n" \
 	"FROM district \n" \
 	"WHERE d_w_id = %d\n" \
 	"  AND d_id = %d\n" \
 	"FOR UPDATE"
+#else
+#define NEW_ORDER_2 \
+   "SELECT d_tax, d_next_o_id\n" \
+   "FROM district \n" \
+   "WHERE d_w_id = %d\n" \
+   "  AND d_id = %d\n"
+#endif
 
 #define NEW_ORDER_3 \
 	"UPDATE district\n" \
